添加JVM参数以解决Java模块访问限制问题